@startuml class_diagram_utils
skinparam classAttributeIconSize 0
skinparam dpi 150
skinparam packageStyle rectangle

title UTILS LAYER - Class Diagram

package "Utils" {
    
    enum LogLevel {
        DEBUG
        INFO
        WARNING
        ERROR
        NONE
    }
    
    interface IBuffer {
        +write(data, len) : size_t
        +read(dest, len) : size_t
        +clear() : void
        +available() : size_t
        +capacity() : size_t
    }
    
    class Buffer {
        -mBuffer : vector_uint8
        -mHead : size_t
        -mTail : size_t
        -mIsFull : bool
        -mCapacity : size_t
        -mMutex : mutex
        +Buffer(capacityBytes)
        +write(data, len) : size_t
        +read(dest, len) : size_t
        +clear() : void
        +available() : size_t
        +capacity() : size_t
        -getAvailableInternal() : size_t
        -isFullInternal() : bool
        -isEmptyInternal() : bool
    }
    
    interface ILogger {
        +setLevel(level) : void
        +getLevel() : LogLevel
        +log(level, message) : void
    }
    
    class Logger <<singleton>> {
        -mLevel : LogLevel
        -mMutex : mutex
        -{static} getInstance() : Logger
        +setLevel(level) : void
        +getLevel() : LogLevel
        +log(level, message) : void
        -getTimestamp() : string
        -getLevelName(level) : string
    }
    
    Buffer ..|> IBuffer
    Logger ..|> ILogger
    
    note right of Logger
        Convenience Macros:
        LOG_DEBUG(msg)
        LOG_INFO(msg)
        LOG_WARNING(msg)
        LOG_ERROR(msg)
    end note
    
    note right of Buffer
        Thread-safe circular buffer
        for audio data streaming.
        Default: 1MB capacity.
    end note
}

@enduml
